syntax = "proto3";

package mathtest;

// Defines the service
service MathTest {
    // Function invoked to send the request
    rpc sendRequest (MathRequest) returns (MathReply) {}
    rpc sendarray (MathRequest) returns (Mathhasil) {}
    rpc sendchat (stream MathRequest) returns (stream Mathhasil) {}
}

// The request message containing requested numbers
message MathRequest {
    int32 a = 1;
    int32 b = 2;
    string header = 3;
}

// The response message containing response
message MathReply {
    int32 result = 1;
}

message Mathhasil {
    int32 a = 1;
    int32 b = 2;
    string header = 3;
    repeated float result_float = 4;
}
